3.1     2020 Dec 28
        - Added function to remove UK/GB from the EU per 1-1-2021
3.2     2021 Apr 25
        - Fixed a Vat rate warning when an invoice was sent to a person in a non EU country.
        - Fixed: Company name was filled with person name if the customer was not a company.
3.3     2022 Jan ??
        - Addon is now maintained by Buro RaDer.
        - Refactored:
          - Code style and formatting (PSR-2).
          - Readme, Licences, links to online GPLv3 license.
          - Changed Acumulus Connect to just Acumulus in UI texts and comments.
          - Removed all &reg; (®) signs.
          - Changed texts and links to author and support.
          - Typos, CRLF -> LF, new array style ([]).
          - Added PHPDoc blocks and type-info to parameters and function returns.
          - Removed warnings and errors found by PhpStorm inspections.
          - Removed use of functions from the mysql extension (already removed in PHP 7.0!).
          - Changed contents of the <connector> tag in XML messages to the Acumulus API.
          - Added a file with stubs of functions and classes used from WHMCS that
            aids - at development time - with autocompletion, static (type)
            checking, etc. This file is never loaded at runtime.
          - Added a wrapper around localAPI() that adds error logging.
          - Replaced a number of string concatenations by variable expansion in double-quoted strings.
          - Changed calls to logActivity via localAPI to direct calls to logActivity.
          - Added logging to hooks, e.g. if they are not enabled.
          - Added a function for generic exception logging.
        - Bugs:
          - Presenting Acumulus accounts went wrong if no account number is defined
            in Acumulus for a certain account (e.g. cash or -1: outside Acumulus).
          - Added accepting undocumented entryproc "no changes made'.